@@ -46,9 +46,9 @@
 	#endif
 #else
 	#ifdef SHARED
-		#include <lua/lua.h>
-		#include <lua/lualib.h>
-		#include <lua/lauxlib.h>
+		#include <lua.h>
+		#include <lualib.h>
+		#include <lauxlib.h>
 	#else
 		#include "lua/lua.h"
 		#include "lua/lualib.h"
