@@ -94,7 +94,6 @@ bool stateInit( const char *exePath ) {
 			state->materials[i] = NULL;
 		}
 	}
-
     InitWindow( state->resolution.x, state->resolution.y, "ReiLua" );
 	/* Has to be after InitWindod where opengl context is created. */
 	state->materials[0] = malloc( sizeof( Material ) );
@@ -123,13 +122,13 @@ void stateFree() {
 	for ( int i = 0; i < state->imageCount; ++i ) {
 		if ( state->images[i] != NULL ) {
 			UnloadImage( *state->images[i] );
-			// free( state->images[i] );
+			free( state->images[i] );
 		}
 	}	
 	for ( int i = 0; i < state->textureCount; ++i ) {
 		if ( state->textures[i] != NULL ) {
 			texturesFreeTexture(i);
-			// free( state->textures[i] );
+			free( state->textures[i] );
 		}
 	}
 	for ( int i = 0; i < state->fontCount; ++i ) {
@@ -209,7 +208,6 @@ void stateFree() {
 		}
 	}
 #endif
-
 	if ( IsAudioDeviceReady() ) {
 		CloseAudioDevice();
 	}
