@@ -100,6 +100,7 @@ Detailed changes:
 	- ADDED: Values for API.md
 	- ADDED: GetFontTexture
 	- CHANGED: Renamed doc_parser.lua to docgen.lua
+	- FIXED: isValidRenderTexture checks that it is TEXTURE_TYPE_RENDER_TEXTURE
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.4.0		Using Raylib 4.2
